# localpost.py

./: .aider.conf.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  justfile  mkdocs.yml  pypi_readme.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  docs.yaml  pypi-publish.yaml
benchmarks/: .gitignore  README.md  _setup.py
benchmarks/_core/: __init__.py  cli.py  filters.py  render.py  runner.py  types.py
benchmarks/http/: PERF_FINDINGS.md  README.md  _pythons.py  _render_html.py  _setup.py  runner.py  scenarios.py  stacks.py
benchmarks/http/apps/: _cli.py  _flask_app.py  _starlette_app.py  flask_cheroot.py  flask_granian.py  flask_gunicorn.py  localpost_flask.py  localpost_h11.py  localpost_h11_acceptor_s4.py  localpost_h11_s4.py  localpost_httptools.py  localpost_httptools_acceptor_s4.py  localpost_httptools_diag.py  localpost_httptools_inline.py  localpost_httptools_inline_acceptor_s4.py  localpost_httptools_inline_s2.py  localpost_httptools_inline_s4.py  localpost_httptools_s2.py  localpost_httptools_s4.py  localpost_native.py  localpost_native_acceptor_s4.py  localpost_native_s2.py  localpost_native_s4.py  localpost_wsgi.py  starlette_granian.py  starlette_uvicorn.py
benchmarks/macro/: __init__.py  _setup.py
benchmarks/macro/_core/: __init__.py  cli.py  filters.py  pythons.py  render.py  runner.py  types.py
benchmarks/macro/http/: PERF_FINDINGS.md  README.md  runner.py  scenarios.py  stacks.py
benchmarks/macro/openapi/: README.md  __init__.py  runner.py  (+2 more)
benchmarks/micro/: bench_router.py  bench_uri_template.py  conftest.py
benchmarks/openapi/: README.md  __init__.py  runner.py  scenarios.py  stacks.py
docs/: CNAME  _hooks.py  getting-started.md  index.md
docs/adr/: 0001-anyio-as-async-runtime.md  0002-h11-httptools-coexist.md  0003-sync-native-http-server.md  0004-pull-based-disconnect-detection.md  0005-no-idle-timeout-for-worker-pools.md  index.md  template.md
docs/design/: connection-model.md  deployment-topologies.md  request-body-handling.md  server-backends.md  threading-topologies.md
docs/modules/: di.md  hosting.md  http.md  openapi.md  scheduler.md
examples/app_host/: app.py  failing_service.py  finite_service.py  http_app.py
examples/di/: basic.py  basic_cleanup.py  flask_app.py
examples/host/: channel.py  click_cli.py  finite_service.py
examples/http/: app_server.py  compressed_api.py  flask_app_server.py  middleware_basic_auth.py  middleware_rate_limit.py  multithread_server.py  openapi_app_server.py  sentry_router_server.py  simple_server.py  sse_compressed.py  static_files.py  threaded_server.py  wsgi_app_server.py
examples/openapi/: app.py  async_app.py  wsgi_app.py
examples/scheduler/: app.py  cancellation.py  cron.py  failing_tasks.py  fastapi_lifespan.py  fastdepends.py  finite_task.py  serve_async.py  serve_sync.py
localpost/: __init__.py  _debug.py  _portal.py  _run.py  _sync_utils.py  _utils.py  scopes.py  threadtools.py
localpost/consumers/: README.md  __init__.py  _sqs_types.py  _utils.py  async_queue.py  azure_queue.py  azure_servicebus.py  channel.py  kafka.py  kafka_otel.py  kafka_protobuf.py  pubsub.py  queue.py  sqs.py  sqs_otel.py  stdlib_queue.py  stream.py  stream_otel.py
localpost/di/: README.md  _services.py  flask.py  quart.py
localpost/experimental/: __init__.py
localpost/flow/: __init__.py  _batching.py  _flow.py  _ops.py  _queue.py  _stream.py
localpost/hosting/: README.md  __init__.py  _host.py  app_host.py  grpc.py  http.py  middleware.py  middlewares.py  rsgi.py  utils.py
localpost/http/: README.md  TODO.md  __init__.py  __main__.py  _async_base.py  _base.py  _benchmark.py  _benchmark.sh  _benchmark_app.py  _benchmark_uvicorn.py  _body.py  _cancel.py  _pool.py  _sentry.py  _service.py  _types.py  app.py  asgi.py  compress.py  config.py  flask.py  flask_sentry.py  router.py  router_sentry.py  rsgi.py  server.py  server_h11.py  server_httptools.py  server_manager.py  server_wsgi.py  static.py  uritemplate.py  worker.py  wsgi.py
localpost/openapi/: README.md  __init__.py  _docs.py  _operation_core.py  app.py  auth.py  filter.py  middleware.py  operation.py  pydantic.py  resolvers.py  results.py  schemas.py  spec.py  sse.py
localpost/scheduler/: README.md  __init__.py  _cond.py  _scheduler.py  _trigger.py
localpost/threadtools/: README.md  __init__.py  _base.py  _channel.py  _executor.py  _pool.py  _run_async.py  _sync.py  _task_group.py
plans/: compression-middleware.md  openapi-attrs.md  openapi-benchmarks.md  static-files.md  websocket-support.md  wsgi-deployment.md
tests/: README.md  conftest.py  threadtools.py
tests/benchmarks/: http_runner.py  http_stacks.py
tests/consumers/: RedpandaContainer.py  conftest.py  kafka.py  pubsub.py  pubsub_async.py  sqs.py  sqs_aioboto.py  sqs_boto.py  stream.py
tests/di/: services.py
tests/flow/: custom_middlewares.py  flow.py  middlewares.py  ops.py
tests/hosting/: _signal_app.py  app_host.py  host.py  hosted_service.py  hosts_combine.py  lifetime_extras.py  multi_service.py  rsgi.py  run_app.py  service_middlewares.py  service_ops.py  service_wrap.py  signal_handling.py
tests/http/: _helpers.py  _integration_app.py  _sentry_helpers.py  acceptor_stress.py  app.py  asgi.py  backend_parity.py  body.py  compress.py  conftest.py  flask_sentry_handler.py  flask_server.py  integration.py  parser_parity_props.py  router.py  router_props.py  router_sentry_handler.py  rsgi.py  server.py  service.py  static.py  uri_template_props.py  wsgi.py  wsgi_to.py
tests/openapi/: aio_app.py  aio_integration.py  aio_rsgi_integration.py  app.py  auth.py  conftest.py  filter.py  integration.py  middleware.py  op_filter_tests.py  polish.py  schemas.py  spec.py  sse.py  wsgi.py
tests/scheduler/: cond.py  cond_cron.py  scheduler.py
tests/threadtools/: async_executor.py  channel_props.py  channels.py  conftest.py  executor.py  run_async.py  thread_pool.py  thread_task_group.py
tests/utils/: core.py  events.py
(+69 files in other folders)
