[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

# See also https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet
[project.urls]
Homepage = 'https://github.com/alexeyshockov/localpost.py'
Changelog = 'https://github.com/alexeyshockov/localpost.py/blob/main/CHANGELOG.md'
Docs = 'https://alexeyshockov.github.io/localpost.py/'

[project]
name = "localpost"
version = "0.6.0.dev0"
description = "Consumers framework for different message brokers & simple in-process task scheduler"
requires-python = ">=3.12"
readme = "pypi_readme.md"
license = "MIT" # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#pep-639-license-declaration
authors = [
    { name = "Alexey Shokov" },
]
keywords = [
    "scheduler", "cron",
    "message brokers", "sqs", "kafka", "nats", "rabbitmq",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: Trio",
    "Topic :: System",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Office/Business :: Scheduling",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
#    "typing_extensions ~=4.10",
    "anyio ~=4.12",
]

[project.optional-dependencies]
cron = [
    "croniter >=2.0,<4.0",
]
scheduler = [  # Better name?..
#    "localpost[cron]",
    "humanize >=3.0,<5.0",
    "pytimeparse2 ~=1.6",
]
http-rest = [
    "h11 ~=0.16",
#    "uritemplate ~=4.2",
#    "werkzeug ~=3.1",
#    "multipart",
#    "python-multipart",
]
sqs = [
    "botocore ~=1.38",  # Sync SQS client (default)
#    "boto3 ~=1.38",  # In case boto3 is available, the default session will be used
]
kafka = [
    "confluent-kafka ~=2.4",
]
nats = [
    "nats-py ~=2.8",
]
#rabbitmq = [
#    "aio-pika ~=9.1",
#    "pika ~=1.3",
#]
pubsub = [
    "google-cloud-pubsub ~=2.28",
]
azure-queue = [
    "azure-identity",
    "azure-storage-queue ~=12.8",
]
azure-servicebus = [
    "azure-identity",
    "azure-servicebus ~=7.10",
]

[dependency-groups]
dev = [
    "icecream ~=2.1",
    "structlog ~=25.0",
    "trio ~=0.32",
]
dev-hosting-services = [
    "uvicorn ~=0.30",
    "hypercorn ~=0.17",
    "grpcio ~=1.68",
]
dev-consumers = [
    "boto3 ~=1.38",
    "aws-lambda-powertools ~=3.10",
#    "aiobotocore ~=2.21",
#    "aioboto3 >=14.1",
    "confluent-kafka[schemaregistry,protobuf]",
    "grpcio-tools ~=1.68",
]
dev-http = [
    "punq ~=0.7",
    "flask ~=3.1",
#    "defspec ~=0.5",  # Replaced by our own implementation
    "msgspec ~=0.20",
    "pydantic ~=2.11",
    "a2wsgi",
]
dev-sentry = [
    "sentry-sdk ~=2.51",
]
dev-otel = [
    "opentelemetry-exporter-otlp",  # Both gRPC and HTTP
    "opentelemetry-instrumentation-confluent-kafka >=0.60b1",
#    "opentelemetry-instrumentation-aiokafka >=0.60b1",
    "opentelemetry-instrumentation-botocore >=0.60b1",
    "protobuf ~=6.29",  # See https://github.com/open-telemetry/opentelemetry-python/issues/4639#issuecomment-2997003823
]
dev-types = [
    "types-croniter",
#    "types-confluent-kafka",  # Many signatures do not match to the actual implementation
    "types-protobuf ~=6.29",  # Must be in sync with protobuf version, see above
    "types-grpcio",  # Replaces grpc-stubs, see: https://github.com/python/typeshed/pull/11204
    "types-boto3-lite[sqs] ~=1.38",
]
examples = [
    "fast-depends ~=3.0",
    "fastapi-slim ~=0.128",
    "psycopg[binary,pool] ~=3.2",
]
tests = [
    "pytest ~=9.0",
    "pytest-xdist",
    "setproctitle",  # For pytest-xdist, to have descriptive process names
]
unit-tests = [
    "pytest-mock ~=3.14",
    "pytest-cov ~=7.0",
    "coverage[toml] ~=7.6",
]
integration-tests = [
    "boto3 ~=1.38",
    "testcontainers[google,localstack,nats] ~=4.10",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pyright]
include = ["localpost"]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[[tool.mypy.overrides]]
module = ["grpc.*", "pytimeparse2.*", "confluent_kafka.*"]
follow_untyped_imports = true

[tool.ruff]
line-length = 120
format.docstring-code-format = true

[tool.ruff.lint]
pyupgrade.keep-runtime-typing = true
pydocstyle.convention = "google"
# For the reference, check https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "I",  # isort
    "Q",  # flake8-quotes
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    # TODO Uncomment after adding annotations to all modules
    # All "ANN" rules are covered by mypy, except "ANN204"
#    "ANN204",  # Missing return type annotation for special method ...
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
    # XXX Causes warning https://github.com/astral-sh/ruff/issues/8272
    "ISC",  # flake8-implicit-str-concat
    "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
    # The rest of RET rules don't improve code and may even worsen readability
    "RET501", "RET502", "RET503",  # flake8-return
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
#    "FIX",  # flake8-fixme
    "PGH",  # pygrep-hooks
    "PL",  # Pylint
    "TRY",  # tryceratops
    "PERF",  # Perflint
    "LOG",  # flake8-logging
    "RUF",  # Ruff-specific
]

ignore = [
    "ASYNC109",  # Async function definition with a `timeout` parameter
    "RUF022",  # `__all__` is not sorted
    "PGH003", "PGH004",  # Use specific rule codes when ignoring type issues
    "RUF005",
    "PERF203",  # Enforced for Python versions prior to 3.11, which introduced "zero-cost" exception handling
    "TID252",  # Prefer absolute imports over relative imports from parent modules
    "S101",  # Use of `assert` detected
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    "B011",  # Do not `assert False`
    "SIM105",  # Use `contextlib.suppress(GeneratorExit)` instead of `try`-`except`-`pass`
    # TODO Remove when we drop support for Python <=3.10
    "SIM117",  # Use a single `with` statement with multiple contexts
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    # TODO Reduce complexity
    "PLR0911", "PLR0912", "PLR0915",  # Too many ...
    # Too many false positives
    "PLW2901",  # ... loop variable ... overwritten by assignment target
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY400",  # Use `logging.exception` instead of `logging.error`
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.uv]
build-backend.module-root = ""
build-backend.module-name = "localpost"

[tool.pytest.ini_options]
anyio_mode = "auto"
#addopts = "-q -m 'not integration'"
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
markers = [
    "integration: Consumers (SQS, Kafka, NATS, RabbitMQ) integration tests",
]
